--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "relayer-status",
   "version": "0.1.0",
+  "homepage": "https://derpy-duck.github.io/relayer-status",
   "private": true,
   "dependencies": {
-    "@certusone/wormhole-sdk": "^0.10.5-beta.1",
+    "@certusone/wormhole-sdk": "^0.10.5-beta.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.11",
@@ -14,6 +15,7 @@
     "@types/node": "^16.18.56",
     "@types/react": "^18.2.24",
     "@types/react-dom": "^18.2.8",
+    "ethers": "5.7",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,7 +27,9 @@
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.0.0",
     "react-app-rewired": "^2.2.1"
   }
 }
