--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "relayer-status",
   "version": "0.1.0",
-  "homepage": "https://derpy-duck.github.io/relayer-status",
+  "homepage": "https://wormhole-foundation.github.io/relayer-status",
   "private": true,
   "dependencies": {
     "@certusone/wormhole-sdk": "^0.10.6-beta.0",
